# basws

./: .gitignore  Cargo.toml  README.md
basws/: Cargo.toml
basws-client/: Cargo.toml  README.md
basws-client/src/: client.rs  lib.rs  logic.rs  login_state.rs
basws-client/src/client/: data.rs  waiter.rs
basws-server/: Cargo.toml  README.md
basws-server/src/: connected_client.rs  lib.rs  logic.rs  persistent.rs  server.rs
basws-shared/: Cargo.toml  README.md
basws-shared/src/: challenge.rs  compression.rs  lib.rs  protocol.rs  timing.rs
basws-yew/: Cargo.toml  README.md
basws-yew/src/: lib.rs
basws/examples/: chat-client.rs  chat-server.rs  persistent-chat-server.rs
basws/examples/shared/: chat.rs
basws/src/: lib.rs
