[package]
name = "basws-client"
version = "0.1.0-dev-4"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A simple async WebSocket client/server framework"
readme = "./README.md"
license = "MIT"
keywords = ["websocket", "tokio"]
categories = [
    "web-programming::websocket",
    "network-programming",
    "asynchronous"
]
repository = "https://github.com/khonsulabs/basws"

[dependencies]
tokio-tungstenite = "0.11"
tokio = { version = "0.2", features = ["time", "macros"] }
async-handle = "0.1"
async-channel = "1"
async-rwlock = "1"
basws-shared = { path = "../basws-shared", version = "0.1.0-dev-4" }
async-trait = "0.1"
serde = "1"
serde_cbor = "0.11"
url = "2"
futures = "0.3"
anyhow = "1"
once_cell = "1"
