[package]
name = "basws-server"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
warp = "0.2"
futures = "0.3"
async-rwlock = "1"
async-channel = "1"
uuid = { version = "0.8", features = ["v4", "serde"] }
basws-shared = { path = "../basws-shared" }
anyhow = "1"
serde = "1"
serde_derive = "1"
tokio = "0.2"
serde_cbor = "0.11"
once_cell = "1"
async-trait = "0.1"

[dev-dependencies]
futures-await-test = "0.3"
maplit = "1"
