[package]
name = "basws-server"
version = "0.1.0-dev-3"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A simple async WebSocket client/server framework"
readme = "./README.md"
license = "MIT"
keywords = ["websocket", "tokio"]
categories = [
    "web-programming::websocket",
    "network-programming",
    "asynchronous"
]
repository = "https://github.com/khonsulabs/basws"

[dependencies]
warp = "0.2"
futures = "0.3"
async-rwlock = "1"
async-handle = "0.1"
async-channel = "1"
basws-shared = { path = "../basws-shared", version = "0.1.0-dev-3" }
anyhow = "1"
serde = "1"
serde_derive = "1"
tokio = "0.2"
serde_cbor = "0.11"
async-trait = "0.1"

[dev-dependencies]
futures-await-test = "0.3"
maplit = "1"
