[package]
name = "basws-server"
version = "0.1.0-dev-5"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A simple async WebSocket client/server framework"
readme = "./README.md"
license = "MIT"
keywords = ["websocket", "tokio"]
categories = [
    "web-programming::websocket",
    "network-programming",
    "asynchronous"
]
repository = "https://github.com/khonsulabs/basws"

[features]
default = []
persistent-server = ["sled"]

[dependencies]
warp = "0.2"
futures = "0.3"
async-rwlock = "1"
async-handle = "0.1"
async-channel = "1"
basws-shared = { path = "../basws-shared", version = "0.1.0-dev-5" }
anyhow = "1"
serde = "1"
serde_derive = "1"
tokio = { version = "0.2", features = ["macros"] }
serde_cbor = "0.11"
async-trait = "0.1"
sled = { version = "0.34", optional = true }
log = "0.4"

[dev-dependencies]
futures-await-test = "0.3"
maplit = "1"
