[package]
name = "basws-shared"
version = "0.1.0-dev-3"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A simple async WebSocket client/server framework"
readme = "./README.md"
license = "MIT"
keywords = ["websocket", "tokio"]
categories = [
    "web-programming::websocket",
    "network-programming",
    "asynchronous"
]
repository = "https://github.com/khonsulabs/basws"

[dependencies]
chrono = "0.4"
serde = "1"
serde_derive = "1"
uuid = { version = "0.8", features = ["v4", "serde"] }
rust-crypto = "0.2"
rand = "0.7"
semver = "0.10"
