[package]
name = "basws-shared"
version = "0.1.4"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A simple async WebSocket client/server framework"
readme = "./README.md"
license = "MIT"
keywords = ["websocket", "tokio"]
categories = [
    "web-programming::websocket",
    "network-programming",
    "asynchronous"
]
repository = "https://github.com/khonsulabs/basws"

[dependencies]
serde = "1"
serde_derive = "1"
rand = "0.8"
semver = "0.11"
thiserror = "1"
sha2 = "0.9"
lz4_flex = "0.7"
serde_cbor = "0.11"
log = "0.4"

[target.'cfg(target_arch="wasm32")'.dependencies]
uuid = { version = "0.8", features = ["v4", "serde", "wasm-bindgen"] }
js-sys = "0.3"

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
