[package]
name = "basws-yew"
version = "0.1.4"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A yew-client for basws, a simple async WebSocket client/server framework"
readme = "./README.md"
license = "MIT"
keywords = ["websocket", "yew"]
categories = [
    "web-programming::websocket",
    "network-programming",
    "asynchronous",
    "wasm"
]
repository = "https://github.com/khonsulabs/basws"

[dependencies]
yew = { version = "0.17", features = ["cbor"] }
basws-shared = { path = "../basws-shared", version = "0.1.4" }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
aes-gcm = "0.8"
base64 = "0.13"
aead = "0.3"
url = "2"
rand = { version = "0.8" }
serde_cbor = "0.11"
serde_json = "1"
