[package]
name = "basws"
version = "0.1.0"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"

[features]
default = []
server = ["basws-server"]
client = ["basws-client"]

[dependencies]
basws-shared = { path = "../basws-shared" }
basws-server = { path = "../basws-server", optional = true }
basws-client = { path = "../basws-client", optional = true }

[dev-dependencies]
serde = "1"
serde_derive = "1"
uuid = { version = "0.8", features = ["v4", "serde"] }
async-trait = "0.1"
anyhow = "1"
warp = "0.2"
tokio = { version = "0.2", features = ["full"] }

[[example]]
name = "chat-server"
required-features = ["basws-server"]
