[package]
name = "basws"
version = "0.1.0-dev-6"
authors = ["Jonathan Johnson <jon@khonsulabs.com>"]
edition = "2018"
description = "A simple async WebSocket client/server framework"
readme = "../README.md"
license = "MIT"
keywords = ["websocket", "tokio"]
categories = [
    "web-programming::websocket",
    "network-programming",
    "asynchronous"
]
repository = "https://github.com/khonsulabs/basws"

[features]
default = []
server = ["basws-server"]
client = ["basws-client"]
yew = ["basws-yew"]
persistent-server = ["basws-server/persistent-server"]

[dependencies]
basws-shared = { path = "../basws-shared", version = "0.1.0-dev-6" }
basws-server = { path = "../basws-server", version = "0.1.0-dev-6", optional = true }
basws-client = { path = "../basws-client", version = "0.1.0-dev-6", optional = true }
basws-yew = { path = "../basws-yew", version = "0.1.0-dev-6", optional = true }

[dev-dependencies]
serde = "1"
serde_derive = "1"
serde_json = "1"
anyhow = "1"
warp = "0.2"
tokio = { version = "0.2", features = ["full"] }
rand = "0.7"
log = "0.4"
pretty_env_logger = "0.4"

[[example]]
name = "persistent-chat-server"
required-features = ["basws-server", "persistent-server"]

[[example]]
name = "chat-server"
required-features = ["basws-server"]

[[example]]
name = "chat-client"
required-features = ["basws-client"]
